<resources>
    <string name="app_name">Playlist maker</string>
    <string name="button_search">Поиск</string>
    <string name="button_media">Медиатека</string>
    <string name="button_settings">Настройки</string>
    <string name="button_settings_sharing">Поделиться приложением</string>
    <string name="button_settings_support">Написать в поддержку</string>
    <string name="button_settings_user_agreement">Пользовательское соглашение</string>
    <string name="button_settings_dark_mode">Темная тема</string>
    <string name="search_title">Поиск</string>
    <string name="share_message">Курсы: %s</string>
    <string name="share_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email">qu1eres@yandex.ru</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="track_cover_description">Обложка трека</string>
    <string name="divider_dot">•</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_problems">Проблемы со связью</string>
    <string name="load_failed_check_connection">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="retry">Обновить</string>
    <string name="unknown_title">Unknown Title</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="you_search">История поиска</string>
    <string name="clear_history">Очистить историю</string>
    <string name="album_format">Альбом</string>
    <string name="year_format">Год</string>
    <string name="genre_format">Жанр</string>
    <string name="country_format">Страна</string>
    <string name="duration_format">Длительность</string>
    <string name="currentPlayTime">00:32</string>
    <string name="message_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="tracks_message">Ваша медиатека пуста</string>
    <string name="medialibrary">Медиатека</string>
    <string name="delete_track">Хотите удалить трек?</string>
    <string name="empty_playlist">В этом плейлисте нет ни одного трека</string>
    <string name="playlists">Плейлисты</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="favorites">Избранные треки</string>
    <string name="search_bottom_button">Поиск</string>
    <string name="library_bottom_button">Медиатека</string>
    <string name="settings_bottom_button">Настройки</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_descrip">Описание</string>
    <string name="playlist_create">Создать</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <string name="back_alert_title">Завершить создание плейлиста?</string>
    <string name="back_alert_message">Все несохраненные данные будут потеряны</string>
    <string name="negative_button">Отмена</string>
    <string name="positive_button">Завершить</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <plurals name="countOfTracks">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d трекoв</item>
    </plurals>

    <string name="added_to_playlist">Добавлено в плейлист \"%s\"</string>
    <string name="already_in_playlist">Трек уже добавлен в плейлист \"%s\"</string>
    <string name="playlist_added_success">Плейлист создан.</string>
    <string name="track_title">Title</string>
    <string name="playlist_sharing">Поделиться</string>
    <string name="playlist_redact">Редактировать информацию</string>
    <string name="playlist_delete_message">Хотите удалить плейлист «%s»?</string>
    <string name="playlist_delete">Удалить плейлист</string>
    <string name="playlist_save">Сохранить</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="playlist_empty_sharing">В этом плейлисте нет списка треков, которым можно поделиться</string>

    <plurals name="minutes">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
</resources>