<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/settingsBackgroundColor"
    tools:context=".SearchActivity">

    <LinearLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="12dp"
        android:paddingStart="4dp"
        android:paddingEnd="12dp">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/search_back_button"
            android:padding="12dp"
            app:tint="?attr/settingsIconBackColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_title"
            android:textSize="22sp"
            android:textColor="?attr/settingsTextColor"
            android:fontFamily="@font/ys_display_medium"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/search_bar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <EditText
            android:id="@+id/input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/search_bar_backgroud"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search_title"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:paddingEnd="40dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/settings_button_text"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/clear_icon"
            android:layout_width="40dp"
            android:layout_height="37dp"
            android:layout_gravity="center_vertical|end"
            android:padding="8dp"
            android:src="@drawable/ic_serach_clear"
            android:visibility="gone"
            app:tint="?attr/searchIconTint"
            tools:visibility="visible" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracks_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:paddingHorizontal="16dp"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/empty_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:layout_marginTop="102dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_search_failed"
                android:contentDescription="@string/nothing_found" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nothing_found"
                android:textSize="19sp"
                android:layout_marginTop="16dp"
                android:textColor="?attr/settingsTextColor"
                android:fontFamily="@font/ys_display_medium"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/error_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:layout_marginTop="102dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_connection_error"
                android:contentDescription="@string/connection_problems" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connection_problems"
                android:textSize="19sp"
                android:layout_marginTop="16dp"
                android:textColor="?attr/settingsTextColor"
                android:fontFamily="@font/ys_display_medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/load_failed_check_connection"
                android:textSize="19sp"
                android:layout_marginTop="24dp"
                android:textColor="?attr/settingsTextColor"
                android:fontFamily="@font/ys_display_regular"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/retry_button"
                style="@style/ButtonSearchUpdate"
                android:text="@string/retry"
                android:paddingHorizontal="0dp"
                android:paddingVertical="8dp" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>