<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/settingsBackgroundColor">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/padding_base" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/padding_base" />

    <LinearLayout
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_base"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backToMainActivity"
            style="@style/Main"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:src="@drawable/search_back_button" />

        <TextView
            android:id="@+id/playlist_main"
            style="@style/Main"
            android:textSize="26sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="28dp"
            android:text="@string/new_playlist" />
    </LinearLayout>

    <ImageView
        android:id="@+id/playListImage"
        style="@style/PlaylistPhotoStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/padding_base"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="@dimen/padding_base"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="@id/outlinedTextFieldName"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:srcCompat="@drawable/add_photo"
        android:background="@drawable/add_photo_background"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldName"
        style="@style/inputTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/padding_base"
        android:hint="@string/playlist_name"
        app:layout_constraintBottom_toTopOf="@id/outlinedTextFieldDescription"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/playListImage">
        <EditText
            android:id="@+id/nameET"
            style="@style/inputTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldDescription"
        style="@style/inputTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/padding_base"
        android:hint="@string/playlist_descrip"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldName">

        <EditText
            android:id="@+id/descriptionET"
            style="@style/inputTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton android:layout_width="0dp"
        android:id="@+id/createButton"
        style="@style/PlaylistCreateButtonStyle"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_base"
        android:layout_gravity="center"
        android:text="@string/playlist_create"
        android:enabled="false"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_create_customs"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldDescription"/>

</androidx.constraintlayout.widget.ConstraintLayout>