<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/settingsBackgroundColor">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="28dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/second_left_border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/second_right_border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="24dp" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/album_name_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="album_text" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tool_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/PlayerToolbar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:navigationIcon="@drawable/search_back_button" />

            <ImageView
                android:id="@+id/track_image"
                android:layout_width="312dp"
                android:layout_height="312dp"
                android:layout_marginTop="26dp"
                app:layout_constraintEnd_toEndOf="@+id/second_right_border"
                app:layout_constraintStart_toStartOf="@+id/second_left_border"
                app:layout_constraintTop_toBottomOf="@+id/tool_bar"
                tools:src="@drawable/ic_album_placeholder" />

            <TextView
                android:id="@+id/track_name"
                style="@style/PlayerTrackTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="@id/second_right_border"
                app:layout_constraintStart_toStartOf="@id/second_left_border"
                app:layout_constraintTop_toBottomOf="@+id/track_image"
                tools:text="ОКО" />

            <TextView
                android:id="@+id/artist_name"
                style="@style/PlayerArtistName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="@id/second_right_border"
                app:layout_constraintStart_toStartOf="@id/second_left_border"
                app:layout_constraintTop_toBottomOf="@+id/track_name"
                tools:text="pyrokinesis" />

            <FrameLayout
                android:id="@+id/play_pause_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toStartOf="@+id/favourite"
                app:layout_constraintStart_toEndOf="@+id/playlist"
                app:layout_constraintTop_toBottomOf="@+id/artist_name">

                <ImageView
                    android:id="@+id/play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="?attr/playButtonIcon"
                    android:layout_gravity="center" />

                <ImageView
                    android:id="@+id/play_button_active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="?attr/playButtonActiveIcon"
                    android:layout_gravity="center"
                    android:visibility="gone" />

            </FrameLayout>

            <ImageView
                android:id="@+id/playlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="54dp"
                android:src="?attr/playlistButtonIcon"
                app:layout_constraintStart_toStartOf="@id/second_left_border"
                app:layout_constraintTop_toBottomOf="@+id/artist_name" />

            <ImageView
                android:id="@+id/favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="54dp"
                android:src="?attr/favoriteButtonIcon"
                app:layout_constraintEnd_toEndOf="@id/second_right_border"
                app:layout_constraintTop_toBottomOf="@+id/artist_name" />

            <TextView
                android:id="@+id/current_play_time"
                style="@style/PlayerTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/currentPlayTime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/play_pause_container" />

            <TextView
                android:id="@+id/track_duration_text"
                style="@style/PlayerTrackDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="39dp"
                android:text="@string/duration_format"
                app:layout_constraintStart_toStartOf="@+id/left_border"
                app:layout_constraintTop_toBottomOf="@+id/current_play_time" />

            <TextView
                android:id="@+id/track_duration"
                style="@style/PlayerTrackValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                app:layout_constraintBaseline_toBaselineOf="@+id/track_duration_text"
                app:layout_constraintEnd_toEndOf="@+id/right_border"
                tools:text="02:41" />

            <TextView
                android:id="@+id/album_text"
                style="@style/PlayerTrackDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/album_format"
                app:layout_constraintStart_toStartOf="@+id/left_border"
                app:layout_constraintTop_toBottomOf="@+id/track_duration_text" />

            <TextView
                android:id="@+id/album_name"
                style="@style/PlayerTrackValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="1"
                app:layout_constraintBaseline_toBaselineOf="@+id/album_text"
                app:layout_constraintEnd_toEndOf="@+id/right_border"
                app:layout_constraintStart_toEndOf="@id/album_text"
                tools:text="Сингл" />

            <TextView
                android:id="@+id/year_text"
                style="@style/PlayerTrackDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/year_format"
                app:layout_constraintStart_toStartOf="@+id/left_border"
                app:layout_constraintTop_toBottomOf="@+id/album_text" />

            <TextView
                android:id="@+id/year"
                style="@style/PlayerTrackValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@+id/year_text"
                app:layout_constraintEnd_toEndOf="@+id/right_border"
                tools:text="2022" />

            <TextView
                android:id="@+id/genre_text"
                style="@style/PlayerTrackDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/genre_format"
                app:layout_constraintStart_toStartOf="@+id/left_border"
                app:layout_constraintTop_toBottomOf="@+id/year_text" />

            <TextView
                android:id="@+id/genre_name"
                style="@style/PlayerTrackValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@+id/genre_text"
                app:layout_constraintEnd_toEndOf="@+id/right_border"
                tools:text="Хип-Хоп" />

            <TextView
                android:id="@+id/country_text"
                style="@style/PlayerTrackDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/country_format"
                app:layout_constraintStart_toStartOf="@+id/left_border"
                app:layout_constraintTop_toBottomOf="@+id/genre_text" />

            <TextView
                android:id="@+id/country"
                style="@style/PlayerTrackValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@+id/country_text"
                app:layout_constraintEnd_toEndOf="@+id/right_border"
                tools:text="Россия" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/playlistBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_background"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_marginTop="8dp"
            android:alpha="0.5"
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:background="@drawable/bottom_sheet_r" />

        <TextView
            android:id="@+id/addToPlaylist"
            style="@style/placeHolderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/add_to_playlist" />

        <Button
            android:id="@+id/createNewPlaylistButton"
            style="@style/placeHolderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="24dp"
            android:text="@string/new_playlist" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlistsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="3"
            tools:listitem="@layout/playlist_item_mini" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>